thesis updated. chapter 2 revised to avoid plagiarism

--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -379,3 +379,10 @@
  year={1996},
  publisher={Citeseer}
 }
+@phdthesis{hong10,
+ title={A study of fast, robust stereo-matching algorithms},
+ author={Hong, Wenxian},
+ year={2010},
+ school={Massachusetts Institute of Technology}
+}
+
